Fixed error that stopped image being center aligned on mobile devices.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -82,5 +82,11 @@ footer {
 @media (max-width: 767px) {
   .course-item {
     text-align: center;
+
+    .course-image {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
   }
 }
